# tabmon_dashboard

./: .copier-answers.yml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  README.md  debug_data_service.py  debug_devices.py  debug_merge.py  docker-compose.yml  pyproject.toml  stack.env  test_components.py
.github/workflows/: publish.yml
.streamlit/: config.toml
data_preprocessing/: audio_preprocessing.py  copy_files_to_s3.sh  preprocess_all.py
data_preprocessing/preprocess_func/: audio_preprocessing.py  device_status_preprocessing.py  preprocess_heatmap.py  site_preprocessing.py
proxy/: Dockerfile  default.conf
src/: app.py  audio_dashboard.py  data_loader.py  map_dashboard.py  map_dashboard_backup.py  map_dashboard_new.py  map_pictures.py  site_dashboard.py  site_dashboard_new.py  stat_dashboard.py  to_parquet.py
src/components/: audio.py  auth.py  charts.py  filters.py  filters_broken.py  filters_fixed.py  map_viz.py  metrics.py  sidebar.py  site.py  site_components.py  tables.py  ui_styles.py
src/config/: settings.py
src/services/: README.md  audio_service.py  base_service.py  data_service.py  site_service.py
src/utils/: data_loader.py  map_pictures.py  privacy_utils.py  to_parquet.py  utils.py
