[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.2.0",
    "folium>=0.19.5",
    "pandas>=2.2.3",
    "pyproject-toml>=0.1.0",
    "pyyaml>=6.0.2",
    "streamlit>=1.42.2",
    "streamlit-folium>=0.24.0",
]
